2015-10-02 Marino Romano <sromanos@cern.ch>
        * First steps on the fake rate estimation

2015-10-01 Marino Romano <sromanos@cern.ch>
	* Typo in MiniTtre

2015-09-28 Samuel Calvet <scalvet@in2p3.fr>
	* Add code to remove duplicate events
	
2015-09-22 Danilo Ferreira de Lima <dferreir@cern.ch>
	* Added code to make MiniTree generic to avoid updating it all the
	time.
	* Added track jet b-tagging using --btags X when X is negative.
	* Added b-tagging SFs.
	* TopNtupleAnalysis-00-01-01

2015-09-18 Danilo Ferreira de Lima <dferreir@cern.ch>
	* Start of ChangeLog (with some delay).
	* Added b-tagging and lepton SF systematic uncertainties.
	* TopNtupleAnalysis-00-01-00