@@ -1,3 +1,6 @@
+2015-10-10 Marino Romano <sromanos@cern.ch>
+        * Updates in the fake rate estimation
+
 2015-10-02 Marino Romano <sromanos@cern.ch>
         * First steps on the fake rate estimation
 
